--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         }
 
         .tagline {
-            font-size: 1.2rem;
+            font-size: 1.7rem;
             color: #FFF5CC;
             margin-bottom: 30px;
             text-transform: capitalize;
@@ -312,7 +312,7 @@
             font-size: 1.7rem;
             font-weight: 900;
             text-transform: uppercase;
-            background: linear-gradient(45deg, silver, blue);
+            background-color: blue;
             -webkit-background-clip: text;
             background-clip: text;
             color: transparent;
@@ -338,7 +338,7 @@
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
             top: 0;
             right: 0;
-            background-color: blue;
+            background-color: white;
             margin-top: 10px;
             font-size: 1.5rem;
         }
@@ -394,6 +394,9 @@
             cursor: pointer;
             display: block;
             background-repeat: no-repeat;
+        }
+        li{
+            font-size: 1.7rem;
         }
     </style>
 </head>
