--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 
         .social-btn:hover {
             transform: translateY(-5px);
-            box-shadow: 0 10px 25px rgba(254, 217, 15, 0.5);
+            box-shadow: 0 10px 25px blue;
         }
 
         footer {
@@ -327,7 +327,7 @@
             display: flex;
             align-items: center;
             padding: 6px;
-            border: none;
+            border: 1px solid blue;
             border-radius: 9px;
             text-decoration: none;
             color: #000;
@@ -338,7 +338,7 @@
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
             top: 0;
             right: 0;
-            background-color: white;
+            background-color: silver;
             margin-top: 10px;
             font-size: 1.5rem;
         }
@@ -525,3 +525,4 @@
     </script>
 </body>
 </html>
+
