--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         }
 
         body {
-            background:url('https://images.pexels.com/photos/2387793/pexels-photo-2387793.jpeg?cs=srgb&dl=pexels-adrien-olichon-1257089-2387793.jpg&fm=jpg');
+            background-color:darkgray;
             color: #fff;
             min-height: 100vh;
             overflow-x: hidden;
@@ -44,11 +44,12 @@
 
         .tagline {
             font-size: 1.7rem;
-            color: #FFF5CC;
+            color: white;
             margin-bottom: 30px;
             text-transform: capitalize;
             font-weight: 500;
-            font-family:times Georgia, 'Times New Roman', Times, serif;
+            font-family:Verdana, Geneva, Tahoma, sans-serif;
+            font-weight: bolder;
         }
 
         .coin-name {
@@ -312,7 +313,7 @@
             font-size: 1.7rem;
             font-weight: 900;
             text-transform: uppercase;
-            background-color: blue;
+            background-color: white;
             -webkit-background-clip: text;
             background-clip: text;
             color: transparent;
@@ -327,18 +328,18 @@
             display: flex;
             align-items: center;
             padding: 6px;
-            border: 1px solid blue;
+            
             border-radius: 9px;
             text-decoration: none;
-            color: #000;
+            color: rgb(12, 12, 39);
             font-weight: bold;
             transition: all 0.3s ease;
             min-width: 80px;
             justify-content: center;
-            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 5px 5px darkgray;
             top: 0;
             right: 0;
-            background-color: silver;
+            background-color: white;
             margin-top: 10px;
             font-size: 1.5rem;
         }
@@ -359,6 +360,10 @@
             
             .chart-container {
                 height: 400px;
+            }
+             .tagline{
+                font-size: 1.3rem;
+                li{font-size: 0.5rem;}
             }
         }
 
@@ -383,6 +388,10 @@
             .chart-container {
                 height: 300px;
             }
+            .tagline{
+                font-size: 1.3rem;
+            }
+              li{font-size: 0.5rem;}
         }
 
         .imgbtn3{
@@ -396,7 +405,8 @@
             background-repeat: no-repeat;
         }
         li{
-            font-size: 1.7rem;
+            font-size: 1.5rem;
+            font-weight: bold;
         }
     </style>
 </head>
@@ -525,4 +535,5 @@
     </script>
 </body>
 </html>
+
 
