--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         }
 
         body {
-            background-color:darkgray;
+            background: url('https://tse2.mm.bing.net/th/id/OIP.YhRadFLzKwFlynUyfi7zfAHaEo?rs=1&pid=ImgDetMain&o=7&rm=3');
             color: #fff;
             min-height: 100vh;
             overflow-x: hidden;
@@ -535,5 +535,3 @@
     </script>
 </body>
 </html>
-
-
