--- a/index.html
+++ b/index.html
@@ -76,16 +76,17 @@
             margin: 20px 0;
             text-transform: uppercase;
             letter-spacing: 1px;
-            background: linear-gradient(45deg, red, blue);
-            -webkit-background-clip: text;
-            background-clip: text;
-            color: transparent;
-            text-shadow: 0 0 30px rgba(254, 217, 15, 0.5);
+            color: white;
+           
             font-family: Georgia, 'Times New Roman', Times, serif;
             font-style: italic;
             font-weight: bolder;
         }
-
+.tagline ul {
+    text-align: center;
+    list-style-type: none;
+    padding-left: 0;
+}
         .contract-section {
             background: rgba(0, 0, 0, 0.2);
             border-radius: 15px;
