--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
             font-family: Verdana, Geneva, Tahoma, sans-serif;
             font-weight: bolder;
             line-height: 1.4;
+                font-family: Georgia, 'Times New Roman', Times, serif;
+            font-style: italic;
         }
 
         .tagline ul {
@@ -523,12 +525,12 @@
             </div>  
           
             <div class="tagline">
-                Join the movement for freedom of speech in Germany and against migrant crimes
+                Join the movement for freedom of speech in Germany and against migrant crimes.
                 <ul>
-                    <li>Ensure Naomi's Safety</li>
-                    <li>Advocate for the AfD party</li>
-                    <li>Promote free speech in Germany</li>
-                    <li>Leverage Media and Social influence</li>
+                    <li>- Ensure Naomi's Safety</li>
+                    <li>- Advocate for the AfD party</li>
+                    <li>- Promote free speech in Germany</li>
+                    <li>- Leverage Media and Social influence</li>
                 </ul>
             </div>
         </header>
