--- a/index.html
+++ b/index.html
@@ -558,7 +558,9 @@
                 <div class="mission-item">
                     <i class="fas fa-shield-alt"></i>
                     <h3>Protect Free Speech</h3>
-                    <p>Fighting for the fundamental right to express opinions without fear of persecution in Germany.</p>
+                    <p>
+$NAOMI Token stands for the universal right to speak freely. We fight censorship and defend truth across all borders.
+</p>
                 </div>
                 <div class="mission-item">
                     <i class="fas fa-gavel"></i>
@@ -568,12 +570,13 @@
                 <div class="mission-item">
                     <i class="fas fa-users"></i>
                     <h3>Community Building</h3>
-                    <p>Creating a strong community that stands against oppressive policies and censorship.</p>
+                    <p>Creating the largest worldwide movement of individuals who share Naomi’s vision for justice, freedom, and transparency.
+</p>
                 </div>
                 <div class="mission-item">
                     <i class="fas fa-bullhorn"></i>
                     <h3>Media Influence</h3>
-                    <p>Using social media and traditional platforms to spread our message worldwide.</p>
+                    <p>Leveraging social media and decentralized influence to spread Naomi’s message, grow awareness, and inspire lasting change.</p>
                 </div>
             </div>
         </section>
