--- a/index.html
+++ b/index.html
@@ -564,8 +564,8 @@ $NAOMI Token stands for the universal right to speak freely. We fight censorship
                 </div>
                 <div class="mission-item">
                     <i class="fas fa-gavel"></i>
-                    <h3>Political Advocacy</h3>
-                    <p>Supporting political movements that prioritize national sovereignty and citizen rights.</p>
+                    <h3>Onboard Naomi</h3>
+                    <p>Empowering Naomi’s voice through $NAOMI Token — uniting supporters who stand for her beliefs, strength, and freedom of speech.</p>
                 </div>
                 <div class="mission-item">
                     <i class="fas fa-users"></i>
