--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
             </div>  
           
             <div class="tagline">
-                Join the movement for freedom of speech in Germany and against migrant crimes.
+                JOIN THE MOVEMENT FOR FREEDOM OF SPEECH IN GERMANY AND AGAINST MIGRANT CRIMES.
                 <ul>
                     <li>- Ensure Naomi's Safety</li>
                     <li>- Advocate for the AfD party</li>
